--- a/styles/home.css
+++ b/styles/home.css
@@ -1,69 +1,92 @@
 .content {
-    display: grid;
-    grid-template-columns: 60% 40%;
-    grid-template-rows: 11.4rem 1fr;
-    grid-template-areas: 
-    'header header'
-    'left right';
+  display: grid;
+  grid-template-columns: 60% 40%;
+  grid-template-rows: 11.4rem 1fr;
+  grid-template-areas:
+    "header header"
+    "left right";
 }
 
 header {
-    grid-area: header;
+  grid-area: header;
 }
 
 #bg {
-    grid-area: left;
-    background: url('/assets/home-bg-img.svg') no-repeat top/contain;
-    background-position-x: -10rem;
+  grid-area: left;
+  background: url("/assets/home-bg-img.svg") no-repeat top/contain;
+  background-position-x: -10rem;
 }
 
 main {
-    grid-area: right;
+  grid-area: right;
 
-    display: flex;
-    align-items: center;
-    margin-top: -12rem;
+  display: flex;
+  align-items: center;
+  margin-top: -12rem;
 }
 
 main .container {
-    width: min(36.3rem, 100%);
+  width: min(36.3rem, 100%);
 }
 
 main h2 {
-    font-family: 'Poppins', sans-serif;
-    font-size: clamp(20px, 5vw, 2.8rem);
-    margin-bottom: 2.4rem;
-    color: var(--blue-dark);
+  font-family: "Poppins", sans-serif;
+  font-size: clamp(20px, 5vw, 2.8rem);
+  margin-bottom: 2.4rem;
+  color: var(--blue-dark);
 }
 
 input {
-    border: 0.2rem solid var(--grey-blue);
-    padding: 0 1.6rem;
+  border: 0.2rem solid var(--grey-blue);
+  padding: 0 1.6rem;
 }
 
-input, button, .button {
-    width: 100%;
-    margin-bottom: 1.8rem;
+input,
+button,
+.button {
+  width: 100%;
+  margin-bottom: 1.8rem;
 }
 
 .separator {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    margin: 4rem 0;
+  margin: 4rem 0;
 }
 
 .separator div:nth-child(2) {
-    color: var(--grey-blue);
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    line-height: 0;
-    padding: 0 1.35rem;
+  color: var(--grey-blue);
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  line-height: 0;
+  padding: 0 1.35rem;
 }
 
 .separator div:nth-child(1),
 .separator div:nth-child(3) {
-    background-color: var(--grey-blue);
-    width: 100%;
-    height: 1px;
+  background-color: var(--grey-blue);
+  width: 100%;
+  height: 1px;
+}
+
+.ball {
+  width: 21.2rem;
+  height: 21.2rem;
+  background-color: var(--blue);
+  position: fixed;
+  clip-path: circle();
+  opacity: 0.1;
+}
+
+.ball.top {
+  width: 63.3rem;
+  height: 63.3rem;
+  top: -46rem;
+  right: -35rem;
+}
+
+.ball.bottom {
+  bottom: -15rem;
+  right: 5.6rem;
 }
