--- a/styles/room.css
+++ b/styles/room.css
@@ -1,94 +1,153 @@
 .content {
-    max-width: 80%;
+  max-width: 80%;
 }
 
 #room header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-    width: 100%;
+  width: 100%;
 }
 
 #room header .buttons {
-    display: flex;
+  display: flex;
 }
 
 #room header .buttons .button:nth-child(1) {
-    margin-right: .8rem;
-    padding: 1.3rem 1.6rem;
+  margin-right: 0.8rem;
+  padding: 1.3rem 1.6rem;
 }
 
 #room header .buttons .button:nth-child(1) img {
-    width: 2rem;
-    height: 2rem;
-    margin-left: 1rem;
-
+  width: 2rem;
+  height: 2rem;
+  margin-left: 1rem;
 }
 
 #room header .buttons .button:nth-child(2) {
-    padding: 1.3rem 3.2rem;
+  padding: 1.3rem 3.2rem;
 }
 
 #room header .buttons .button:nth-child(2) img {
-    width: 2rem;
-    height: 2rem;
-    margin-left: 1rem;
+  width: 2rem;
+  height: 2rem;
+  margin-left: 1rem;
 }
 
 #question-form h2 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 2.8rem;
-    color: var(--blue-dark);
-    margin-bottom: 2.4rem;
-    line-height: 4.2rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 2.8rem;
+  color: var(--blue-dark);
+  margin-bottom: 2.4rem;
+  line-height: 4.2rem;
 }
 
 #question-form form {
-     border: .2rem solid var(--grey-blue);
-     padding: 1.6rem;
-     border-radius: 0 .8rem .8rem .8rem;
-     margin-bottom: 1.6rem;
+  border: 0.2rem solid var(--grey-blue);
+  padding: 1.6rem;
+  border-radius: 0 0.8rem 0.8rem 0.8rem;
+  margin-bottom: 1.6rem;
 }
 
 #question-form form textarea {
-    width: 100%;
-    resize: none;
-    background: transparent;
-    outline: none;
+  width: 100%;
+  resize: none;
+  background: transparent;
+  outline: none;
 }
 
 #question-form form textarea::placeholder {
-    color: var(--grey-blue);
+  color: var(--grey-blue);
 }
 
 #question-form form footer {
-    display: flex;
+  display: flex;
 }
 
 #question-form form footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 #question-form form footer > div {
-    color: var(--icons-details);
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    font-size: 1.4rem;
-    display: flex;
-    align-items: center;
+  color: var(--icons-details);
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
 }
 
-
 #question-form form footer > div img {
-    margin-right: 0.9rem;
+  margin-right: 0.9rem;
 }
 
 #question-form form footer button {
-    height: auto;
-    padding: .8rem 2.4rem;
-    line-height: 2.4rem;
+  height: auto;
+  padding: 0.8rem 2.4rem;
+  line-height: 2.4rem;
+}
+
+.question-wrapper {
+  background-color: var(--blue-light);
+  border-radius: 0 0.8rem 0.8rem 0.8rem;
+  margin-bottom: 0.8rem;
+  padding: 2.4rem;
+}
+
+.question-wrapper .question-content {
+  display: flex;
+  align-items: flex-start;
+}
+
+.question-wrapper .question-content .user {
+  background-color: var(--blue);
+  clip-path: circle();
+  padding: 1.4rem;
+}
+
+.question-wrapper .question-content p {
+  font-family: "Open Sans", sans-serif;
+  color: var(--blue-dark);
+  margin-left: 1.6rem;
+  text-align: justify;
+
+  display: flex;
+  align-items: center;
+  min-height: 5.2rem;
+}
+
+.question-wrapper .actions {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 0.6rem;
+}
+
+.question-wrapper .actions > a {
+  display: flex;
+  align-items: center;
+  color: var(--grey-dark);
+  cursor: pointer;
+}
+
+.question-wrapper .actions > a:nth-child(2) {
+  margin-left: 2rem;
+}
+
+.question-wrapper .actions img {
+  padding-right: 0.8rem;
+}
+
+/* Questão Selecionada */
+
+.question-wrapper.read {
+  background: var(--grey-medium);
+}
+
+.question-wrapper.read .question-content .user {
+  background: var(--grey-blue);
 }
