--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="styles/room.css" />
     <link rel="stylesheet" href="styles/modal.css" />
 
+    <!-- SCRIPT -->
+    <script src="scripts/main.js" defer type="module"></script>
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,24 +22,24 @@
     />
 
     <title>Rocket.Q - Perguntas e Respostas</title>
-    <link rel="icon" href="assets/icon.svg" />
+    <link rel="icon" href="images/icon.svg" />
   </head>
 
   <body>
     <div id="room" class="content">
       <header>
-        <a href="home.html">
-          <img src="assets/logo.svg" alt="Rocket.Q Logo" />
+        <a href="index.ejs">
+          <img src="images/logo.svg" alt="Rocket.Q Logo" />
         </a>
 
         <div class="buttons">
-          <div class="button outlined">
+          <div class="button outlined" id="room-id" data-id="323243">
             #323243
-            <img src="assets/copy.svg" alt="" />
+            <img src="images/copy.svg" alt="" />
           </div>
 
           <a href="#" class="button">
-            <img src="assets/users1.svg" alt="" />Criar sala
+            <img src="images/users1.svg" alt="" />Criar sala
           </a>
         </div>
       </header>
@@ -56,7 +59,7 @@
 
             <footer>
               <div>
-                <img src="assets/lock.svg" alt="Cadeado" />Esta pergunta é
+                <img src="images/lock.svg" alt="Cadeado" />Esta pergunta é
                 anônima
               </div>
               <button>Enviar</button>
@@ -70,19 +73,19 @@
             <div class="question-wrapper">
               <div class="question-content">
                 <div class="user">
-                  <img src="assets/user.svg" alt="Avatar" />
+                  <img src="images/user.svg" alt="Avatar" />
                 </div>
                 <div class="question">
                   <p>Qual a diferença entre const, var e let no JavaScript?</p>
                 </div>
               </div>
               <div class="actions">
-                <a href="#" class="check">
-                  <img src="assets/check.svg" alt="Marcar como lida" /> Marcar
+                <a href="#" class="check" data-id="2">
+                  <img src="images/check.svg" alt="Marcar como lida" /> Marcar
                   como lida
                 </a>
-                <a href="#" class="delete">
-                  <img src="assets/trash.svg" alt="Excluir" /> Excluir
+                <a href="#" class="delete" data-id="2">
+                  <img src="images/trash.svg" alt="Excluir" /> Excluir
                 </a>
               </div>
             </div>
@@ -90,7 +93,7 @@
             <div class="question-wrapper">
               <div class="question-content">
                 <div class="user">
-                  <img src="assets/user.svg" alt="Avatar" />
+                  <img src="images/user.svg" alt="Avatar" />
                 </div>
                 <div class="question">
                   <p>
@@ -106,12 +109,12 @@
                 </div>
               </div>
               <div class="actions">
-                <a href="#" class="check">
-                  <img src="assets/check.svg" alt="Marcar como lida" /> Marcar
+                <a href="#" class="check" data-id="3">
+                  <img src="images/check.svg" alt="Marcar como lida" /> Marcar
                   como lida
                 </a>
-                <a href="#" class="delete">
-                  <img src="assets/trash.svg" alt="Excluir" /> Excluir
+                <a href="#" class="delete" data-id="3">
+                  <img src="images/trash.svg" alt="Excluir" /> Excluir
                 </a>
               </div>
             </div>
@@ -119,19 +122,19 @@
             <div class="question-wrapper read">
               <div class="question-content">
                 <div class="user">
-                  <img src="assets/user.svg" alt="Avatar" />
+                  <img src="images/user.svg" alt="Avatar" />
                 </div>
                 <div class="question">
                   <p>O que é JavaScript?</p>
                 </div>
               </div>
               <div class="actions">
-                <a href="#" class="check">
-                  <img src="assets/check.svg" alt="Marcar como lida" /> Marcar
+                <a href="#" class="check" data-id="1">
+                  <img src="images/check.svg" alt="Marcar como lida" /> Marcar
                   como lida
                 </a>
-                <a href="#" class="delete">
-                  <img src="assets/trash.svg" alt="Excluir" /> Excluir
+                <a href="#" class="delete" data-id="1">
+                  <img src="images/trash.svg" alt="Excluir" /> Excluir
                 </a>
               </div>
             </div>
@@ -143,10 +146,10 @@
     <!-- Modal -->
     <div class="modal-wrapper">
       <div class="modal">
-        <h2>Excluir pergunta</h2>
-        <p>Tem certeza que você deseja excluir esta pergunta</p>
+        <h2>Excluir Pergunta</h2>
+        <p>Tem certeza que você deseja excluir esta pergunta?</p>
 
-        <form action="#">
+        <form action="#" method="POST">
           <label for-id="password" class="sr-only"
             >Digite sua senha admin</label
           >
@@ -158,7 +161,7 @@
           />
 
           <div class="buttons">
-            <div class="button grey">Cancelar</div>
+            <div class="button cancel grey">Cancelar</div>
             <button class="button red">Sim, excluir</button>
           </div>
         </form>
