--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/styles/home.css" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,14 +18,14 @@
     />
 
     <title>Rocket.Q</title>
-    <link rel="icon" href="images/icon.svg" />
+    <link rel="icon" href="/images/icon.svg" />
   </head>
 
   <body>
     <div id="home" class="content">
       <header>
-        <a href="index.ejs">
-          <img src="images/logo.svg" alt="Rocket.Q Logo" />
+        <a href="/">
+          <img src="/images/logo.svg" alt="Rocket.Q Logo" />
         </a>
       </header>
 
