--- a/src/views/parts/create-pass.ejs
+++ b/src/views/parts/create-pass.ejs
@@ -1,8 +1,8 @@
 <section>
   <h2>Crie sua própria sala</h2>
-  <form action="#">
+  <form action="/create-room" method="POST">
     <label for="room-pass" class="sr-only">Insira uma senha</label>
-    <input type="password" id="room-pass" placeholder="Insira uma senha" />
+    <input type="password" name="password" id="room-pass" placeholder="Insira uma senha" />
     <button>
       <img src="images/users1.svg" alt="Entrar na sala" />
       Criar sala
