--- a/src/views/parts/enter-room.ejs
+++ b/src/views/parts/enter-room.ejs
@@ -18,7 +18,7 @@
 
 <section>
   <h2>Crie sua própria sala, de forma fácil</h2>
-  <a href="/parts/create-pass" class="button outlined"
+  <a href="/create-pass" class="button outlined"
     ><img src="images/users.svg" alt="" />Criar sala</a
   >
 </section>
