--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/room.css" />
-    <link rel="stylesheet" href="styles/modal.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/styles/room.css" />
+    <link rel="stylesheet" href="/styles/modal.css" />
 
     <!-- SCRIPT -->
-    <script src="scripts/main.js" defer type="module"></script>
+    <script src="/scripts/main.js" defer type="module"></script>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,24 +22,24 @@
     />
 
     <title>Rocket.Q - Perguntas e Respostas</title>
-    <link rel="icon" href="images/icon.svg" />
+    <link rel="icon" href="/images/icon.svg" />
   </head>
 
   <body>
     <div id="room" class="content">
       <header>
-        <a href="index.ejs">
-          <img src="images/logo.svg" alt="Rocket.Q Logo" />
+        <a href="/">
+          <img src="/images/logo.svg" alt="Rocket.Q Logo" />
         </a>
 
         <div class="buttons">
           <div class="button outlined" id="room-id" data-id="323243">
             #323243
-            <img src="images/copy.svg" alt="" />
+            <img src="/images/copy.svg" alt="" />
           </div>
 
           <a href="#" class="button">
-            <img src="images/users1.svg" alt="" />Criar sala
+            <img src="/images/users1.svg" alt="" />Criar sala
           </a>
         </div>
       </header>
@@ -59,7 +59,7 @@
 
             <footer>
               <div>
-                <img src="images/lock.svg" alt="Cadeado" />Esta pergunta é
+                <img src="/images/lock.svg" alt="Cadeado" />Esta pergunta é
                 anônima
               </div>
               <button>Enviar</button>
@@ -73,7 +73,7 @@
             <div class="question-wrapper">
               <div class="question-content">
                 <div class="user">
-                  <img src="images/user.svg" alt="Avatar" />
+                  <img src="/images/user.svg" alt="Avatar" />
                 </div>
                 <div class="question">
                   <p>Qual a diferença entre const, var e let no JavaScript?</p>
@@ -81,11 +81,11 @@
               </div>
               <div class="actions">
                 <a href="#" class="check" data-id="2">
-                  <img src="images/check.svg" alt="Marcar como lida" /> Marcar
+                  <img src="/images/check.svg" alt="Marcar como lida" /> Marcar
                   como lida
                 </a>
                 <a href="#" class="delete" data-id="2">
-                  <img src="images/trash.svg" alt="Excluir" /> Excluir
+                  <img src="/images/trash.svg" alt="Excluir" /> Excluir
                 </a>
               </div>
             </div>
@@ -93,7 +93,7 @@
             <div class="question-wrapper">
               <div class="question-content">
                 <div class="user">
-                  <img src="images/user.svg" alt="Avatar" />
+                  <img src="/images/user.svg" alt="Avatar" />
                 </div>
                 <div class="question">
                   <p>
@@ -110,11 +110,11 @@
               </div>
               <div class="actions">
                 <a href="#" class="check" data-id="3">
-                  <img src="images/check.svg" alt="Marcar como lida" /> Marcar
+                  <img src="/images/check.svg" alt="Marcar como lida" /> Marcar
                   como lida
                 </a>
                 <a href="#" class="delete" data-id="3">
-                  <img src="images/trash.svg" alt="Excluir" /> Excluir
+                  <img src="/images/trash.svg" alt="Excluir" /> Excluir
                 </a>
               </div>
             </div>
@@ -122,7 +122,7 @@
             <div class="question-wrapper read">
               <div class="question-content">
                 <div class="user">
-                  <img src="images/user.svg" alt="Avatar" />
+                  <img src="/images/user.svg" alt="Avatar" />
                 </div>
                 <div class="question">
                   <p>O que é JavaScript?</p>
@@ -130,11 +130,11 @@
               </div>
               <div class="actions">
                 <a href="#" class="check" data-id="1">
-                  <img src="images/check.svg" alt="Marcar como lida" /> Marcar
+                  <img src="/images/check.svg" alt="Marcar como lida" /> Marcar
                   como lida
                 </a>
                 <a href="#" class="delete" data-id="1">
-                  <img src="images/trash.svg" alt="Excluir" /> Excluir
+                  <img src="/images/trash.svg" alt="Excluir" /> Excluir
                 </a>
               </div>
             </div>
