--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -33,12 +33,12 @@
         </a>
 
         <div class="buttons">
-          <div class="button outlined" id="room-id" data-id="323243">
-            #323243
+          <div class="button outlined" id="room-id" data-id="<%= roomId %>">
+            #<%= roomId %>
             <img src="/images/copy.svg" alt="" />
           </div>
 
-          <a href="#" class="button">
+          <a href="/create-pass" class="button">
             <img src="/images/users1.svg" alt="" />Criar sala
           </a>
         </div>
@@ -47,7 +47,7 @@
       <main>
         <section id="question-form">
           <h2>Faça sua pergunta</h2>
-          <form action="#">
+          <form action="/question/create/<%= roomId %>" method="POST">
             <label for-id="question" class="sr-only"
               >O que você quer perguntar?</label
             >
@@ -70,74 +70,55 @@
         <section id="questions">
           <h2 class="sr-only">Perguntas da comunidade</h2>
           <div class="questions">
-            <div class="question-wrapper">
-              <div class="question-content">
-                <div class="user">
-                  <img src="/images/user.svg" alt="Avatar" />
-                </div>
-                <div class="question">
-                  <p>Qual a diferença entre const, var e let no JavaScript?</p>
-                </div>
-              </div>
-              <div class="actions">
-                <a href="#" class="check" data-id="2">
-                  <img src="/images/check.svg" alt="Marcar como lida" /> Marcar
-                  como lida
-                </a>
-                <a href="#" class="delete" data-id="2">
-                  <img src="/images/trash.svg" alt="Excluir" /> Excluir
-                </a>
-              </div>
-            </div>
 
-            <div class="question-wrapper">
-              <div class="question-content">
-                <div class="user">
-                  <img src="/images/user.svg" alt="Avatar" />
-                </div>
-                <div class="question">
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Nesciunt ipsa exercitationem corporis fugiat nobis. Eos,
-                    quisquam dolor facilis asperiores neque officiis officia non
-                    commodi eum, reiciendis nulla vero. Pariatur, veritatis!
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Nesciunt ipsa exercitationem corporis fugiat nobis. Eos,
-                    quisquam dolor facilis asperiores neque officiis officia non
-                    commodi eum, reiciendis nulla vero. Pariatur, veritatis!
-                  </p>
-                </div>
-              </div>
-              <div class="actions">
-                <a href="#" class="check" data-id="3">
-                  <img src="/images/check.svg" alt="Marcar como lida" /> Marcar
-                  como lida
-                </a>
-                <a href="#" class="delete" data-id="3">
-                  <img src="/images/trash.svg" alt="Excluir" /> Excluir
-                </a>
-              </div>
-            </div>
+            <% if (isNoQuestions) { %> 
+              <%- include('parts/no-question')  %> 
+            <% } %> 
 
-            <div class="question-wrapper read">
-              <div class="question-content">
-                <div class="user">
-                  <img src="/images/user.svg" alt="Avatar" />
+            <% questions.forEach(question => { %>                            
+              <div class="question-wrapper">
+                <div class="question-content">
+                  <div class="user">
+                    <img src="/images/user.svg" alt="Avatar">
+                  </div>
+                  <div class="question">
+                    <p><%= question.title  %></p>
+                  </div>
                 </div>
-                <div class="question">
-                  <p>O que é JavaScript?</p>
+                <div class="actions">
+                  <a href="#" class="check" data-id="<%= question.id %>">
+                    <img src="/images/check.svg" alt="Marcar como lida">
+                      Marcar como lida
+                  </a>
+                  <a href="#" class="delete" data-id="<%= question.id %>">
+                    <img src="/images/trash.svg" alt="Excluir">
+                      Excluir
+                  </a>
                 </div>
               </div>
-              <div class="actions">
-                <a href="#" class="check" data-id="1">
-                  <img src="/images/check.svg" alt="Marcar como lida" /> Marcar
-                  como lida
-                </a>
-                <a href="#" class="delete" data-id="1">
-                  <img src="/images/trash.svg" alt="Excluir" /> Excluir
-                </a>
+            <% });  %>
+            
+            
+            <% questionsRead.forEach(questionRead => { %>
+              <div class="question-wrapper read">
+                <div class="question-content">
+                  <div class="user">
+                    <img src="/images/user.svg" alt="Avatar">
+                  </div>
+                  <div class="question">
+                    <p><%= questionRead.title %></p>
+                  </div>
+                </div>
+                <div class="actions">
+                  <a href="#" class="delete" data-id="<%= questionRead.id %>">
+                    <img src="/images/trash.svg" alt="Excluir">
+                      Excluir
+                  </a>
+                </div>
               </div>
-            </div>
+            <% }); %>  
+
+
           </div>
         </section>
       </main>
